--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -1,3 +1,16 @@
 apply plugin: 'java'
 apply plugin: 'application'
 mainClassName = "MyFirstProgram"
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    implementation 'org.testng:testng:7.7.1'
+    implementation 'org.slf4j:slf4j-simple:2.0.6'
+}
+
+test {
+    useTestNG()
+}
