--- a/address-web-tests/build.gradle
+++ b/address-web-tests/build.gradle
@@ -7,7 +7,8 @@ repositories {
 dependencies {
     implementation 'org.testng:testng:7.7.1'
     implementation 'org.slf4j:slf4j-simple:2.0.6'
-    implementation 'org.seleniumhq.selenium:selenium-java:4.8.0'
+    //implementation 'org.seleniumhq.selenium:selenium-java:4.8.0'
+    implementation 'org.seleniumhq.selenium:selenium-java:3.5.2'
 }
 
 test {
