--- a/address-web-tests/build.gradle
+++ b/address-web-tests/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     implementation 'org.slf4j:slf4j-simple:2.0.6'
     //implementation 'org.seleniumhq.selenium:selenium-java:4.8.0'
     implementation 'org.seleniumhq.selenium:selenium-java:3.5.2'
+    implementation 'org.hamcrest:hamcrest:2.2'
 }
 
 test {
