--- a/address-web-tests/build.gradle
+++ b/address-web-tests/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     //implementation 'org.seleniumhq.selenium:selenium-java:4.8.0'
     implementation 'org.seleniumhq.selenium:selenium-java:3.5.2'
     implementation 'org.hamcrest:hamcrest:2.2'
+    implementation 'com.beust:jcommander:1.82'
 }
 
 test {
