--- a/address-web-tests/build.gradle
+++ b/address-web-tests/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     implementation 'org.seleniumhq.selenium:selenium-java:3.5.2'
     implementation 'org.hamcrest:hamcrest:2.2'
     implementation 'com.beust:jcommander:1.82'
+    implementation 'com.thoughtworks.xstream:xstream:1.4.20'
 }
 
 test {
