--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 Test_java/.idea/workspace.xml
+*.log
