--- a/address-web-tests/build.gradle
+++ b/address-web-tests/build.gradle
@@ -6,13 +6,14 @@ repositories {
 
 dependencies {
     implementation 'org.testng:testng:7.7.1'
-    implementation 'org.slf4j:slf4j-simple:2.0.6'
+    //implementation 'org.slf4j:slf4j-simple:2.0.6'
     //implementation 'org.seleniumhq.selenium:selenium-java:4.8.0'
     implementation 'org.seleniumhq.selenium:selenium-java:3.5.2'
     implementation 'org.hamcrest:hamcrest:2.2'
     implementation 'com.beust:jcommander:1.82'
     implementation 'com.thoughtworks.xstream:xstream:1.4.20'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
+    implementation 'ch.qos.logback:logback-classic:1.4.7'
 }
 
 task testGroups(type: Test) {
